fix: fix 'bubble' overflow over the screen

--- a/blocks/add-card-form/_add-card-form.scss
+++ b/blocks/add-card-form/_add-card-form.scss
@@ -19,7 +19,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: $top-layer;
 
   &__input-question {
     display: block;
