--- a/blocks/bubble/_bubble.scss
+++ b/blocks/bubble/_bubble.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: 100%;
   @include max-width-and-height(1vmax, 1vmax);
-  border-radius: 50%;
   background-color: red;
   position: absolute;
   top: 0;
